changes the logo and updated the api for the phone field to be optional

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -406,6 +406,9 @@ section,
 summary {
   display: block;
 }
+nav{
+    background: rgba(7, 4, 41, 0.6);
+}
 /*
  * Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
  */
