edited the Api and the css for the index page

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -278,7 +278,9 @@ body {
   font-smoothing: antialiased; }
 
 html {
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
 
 a {
   color: #f34236; }
